--- a/.github/workflows/open-pr-draft-content.yml
+++ b/.github/workflows/open-pr-draft-content.yml
@@ -13,14 +13,14 @@ jobs:
   open-pr-draft-content:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Bun version
         id: bun-version
         run: |
           echo "RUNTIME_BUN_VERSION=$(cat .tool-versions | grep '^bun' | sed 's/[^0-9.]//g')" >> $GITHUB_OUTPUT
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1.2.2
         with:
           bun-version: ${{ steps.bun-version.outputs.RUNTIME_BUN_VERSION }}
       - name: Install dependencies
@@ -33,13 +33,13 @@ jobs:
           MICROCMS_API_KEY: ${{ vars.MICROCMS_API_KEY }}
 
       # https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#authenticating-with-github-app-generated-tokens
-      - uses: tibdex/github-app-token@v1
+      - uses: tibdex/github-app-token@32691ba7c9e7063bd457bd8f2a5703138591fa58 # v1.9.0
         id: generate-token
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.APP_PRIVATE_KEY }}
       - name: Create pull request
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c # v6.1.0
         with:
           token: ${{ steps.generate-token.outputs.token }}
           add-paths: |
