--- a/.github/workflows/review-draft-content.yml
+++ b/.github/workflows/review-draft-content.yml
@@ -15,14 +15,14 @@ jobs:
     if: startsWith(github.head_ref, 'review-draft-content/')
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Bun version
         id: bun-version
         run: |
           echo "RUNTIME_BUN_VERSION=$(cat .tool-versions | grep '^bun' | sed 's/[^0-9.]//g')" >> $GITHUB_OUTPUT
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1.2.2
         with:
           bun-version: ${{ steps.bun-version.outputs.RUNTIME_BUN_VERSION }}
       - name: Install dependencies
@@ -30,19 +30,19 @@ jobs:
 
       # https://github.com/tsuyoshicho/action-textlint
       - name: textlint-github-pr-check
-        uses: tsuyoshicho/action-textlint@v3
+        uses: tsuyoshicho/action-textlint@acab4b76cd713a83a69c4ad806ae9e837e0de009 # v3.10.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-check
           textlint_flags: "./reviews/**"
       - name: textlint-github-check
-        uses: tsuyoshicho/action-textlint@v3
+        uses: tsuyoshicho/action-textlint@acab4b76cd713a83a69c4ad806ae9e837e0de009 # v3.10.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-check
           textlint_flags: "./reviews/**"
       - name: textlint-github-pr-review
-        uses: tsuyoshicho/action-textlint@v3
+        uses: tsuyoshicho/action-textlint@acab4b76cd713a83a69c4ad806ae9e837e0de009 # v3.10.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
